4.0009    2025-12-10

- +7 0 is apparently allocated to Kazakhstan

- CO 976 (ie +1 XXX 976) is charged at special rates across the whole of the NANP

- Data updates

4.0008    2025-09-13

- Dominican Republic has toll-free numbers with the D digit 0 or 1

- Data updates

4.0007    2025-06-05

- Data updates

4.0006    2025-03-23

- Data updates

4.0005    2024-12-12

- Tweak documentation around deprecated N::P::C::phone2country

- Data updates

4.0004    2024-09-10

- Number::Phone::Country no longer exports 'phone2country', after this
  being deprecated for 20 years!

- the 'noexport' flag on Number::Phone::Country now results in a warning
  which will become fatal 2 years after this release. At the same time,
  warnings about unknown flags will also become fatal.

- Data updates

4.0003    2024-06-07

- No longer auto-tested on 5.12 and below because build-time dependencies
  no longer build reliably

- Data updates, including Lithuania changing its trunk prefix, Mexico
  getting rid of theirs, and Uzbekistan changing both its trunk and
  international prefixes

- Trying to put letters in a phone number now emits warnings, and will
  become fatal 2 years after this release

4.0002    2024-03-08

- Added timezones() method

- Data updates

- Tests are now forgiving of a missing Parallel::ForkManager
  (which isn't available on some Solaris machines)

4.0001    2023-12-10

- Clarification in doco re supported perl versions

- Data updates

4.0000    2023-09-03

- Switch to Data::CompactReadonly for UK database. The UK database is now
  less than 10% of its previous size.

- Data updates

3.9002    2023-06-14

- Data updates only

3.9001    2023-03-07

- Bug fix: if libphonenumber doesn't define any formatters for a country,
  such as for Bonaire (BQ), do the best we can and return +CC NNNNN
  instead of nothing. This was a regression in 3.9000, see
  https://github.com/DrHyde/perl-modules-Number-Phone/issues/122

3.9000    2023-03-05
