@@ -1,3 +1,7 @@
+X.XXXX    XXXX-XX-XX
+
+- the mailing list has moved to Google Groups
+
 4.0009    2025-12-10
 
 - +7 0 is apparently allocated to Kazakhstan
